--- a/src/Resources/Admin_css/question.module.css
+++ b/src/Resources/Admin_css/question.module.css
@@ -20,6 +20,8 @@
     color:Black ;
     background-color: white;
     border-width: 1px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 .options
 {
