--- a/src/Resources/User_components/Question/sb.module.css
+++ b/src/Resources/User_components/Question/sb.module.css
@@ -9,10 +9,15 @@
    }
 .header
 {
-    
+
 }
 .margina{
     margin:0;
     padding: 0;
 
+}
+.choiceForm
+{
+    cursor: pointer;
+    margin-bottom: 30px;
 }
