--- a/src/Resources/User_css/practice.module.css
+++ b/src/Resources/User_css/practice.module.css
@@ -2,7 +2,27 @@
     padding: 1% 1% 0 1%;
     border:none;
   }
-  
+
+  .hr{
+        justify-content: center; 
+        text-align: center; 
+        border-bottom: 1px solid #000; 
+        line-height: 0.1em;
+        padding: 0% 2% 0% 2%;
+        margin: 2% 2% 2% 2%;
+        padding: 0 10px;
+        background-color:#18354C;
+        color: #18354C;
+        font-size: x-large;
+  }
+     .hr span { 
+         background:#fff; 
+         padding:0 10px; 
+     }
+    /* height: 2px;
+    padding: 0% 2% 0% 2%;
+    margin: 0% 2% 0% 2%; */
+
 .cardbody{
     box-shadow:10px black ;
     border-radius: 15px 0px 15px 0px;
@@ -16,6 +36,8 @@
   
 .title{
     font-size: x-large;
+    display : flex;
+    justify-content: center;
 }
 
 .maincontainer{
