--- a/src/Resources/User_css/support.module.css
+++ b/src/Resources/User_css/support.module.css
@@ -24,8 +24,12 @@
     box-shadow: 20px solid black;
     background-color: white;
     padding: 20px;
-    border: 2px solid  rgb(16,24,39);
+    /* border: 2px solid  rgb(16,24,39); */
     /* border-style: none; */
     justify-content: center;
     line-height: 4rem;
+}
+
+.card button{
+    background-color : #18354C;
 }
